--- a/css/flexbox.css
+++ b/css/flexbox.css
@@ -1,69 +1,130 @@
 /* header */
-.cabecera__container{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    position: fixed;
-    top: 0;
+.cabecera__container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: fixed;
+  top: 0;
 }
 
-.cabecera__buscar__item{
-    display: none;
+.cabecera__buscar__item {
+  display: none;
+}
 
+/* menu */
+
+.menu__container {
+  position: fixed;
+  bottom: 0%;
+  height: 75px;
+  width: 100%;
+}
+.menu__lista {
+  display: flex;
+  justify-content: space-around;
+  height: 100%;
+}
+.menu__lista:nth-child(2),
+.menu__lista:nth-child(3),
+.menu__lista:nth-child(4) {
+  display: none;
+}
+
+.menu__lista li {
+  align-self: center;
+}
+
+.menu__itens {
+  /* para que el icono quede arriba y el titulo abajo */
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
 }
 
 /* navbar */
-.superior__seccion__container{
-     display: flex;
-     align-items: center;
-     white-space: nowrap; 
-     /* para que el texto de los botones quede alineado */
-     overflow: scroll;
-     gap: 15px;
+.superior__seccion__container {
+  display: flex;
+  align-items: center;
+  white-space: nowrap;
+  /* para que el texto de los botones quede alineado */
+  overflow: scroll;
+  gap: 15px;
 }
 
 /* footer */
-.rodapie__container{
-    display: flex;
-    flex-flow: column wrap;
-    /* flex-direction: column;
+.rodapie__container {
+  display: flex;
+  flex-flow: column wrap;
+  /* flex-direction: column;
     flex-wrap: wrap; */
 }
 
-
-
 /* queries */
-@media (min-width:834px){
-    /* header */
-    .cabecera__buscar__item{
-        display: block;
-    }
-    /* footer */
-    .rodapie__container{
-        justify-content: space-between;
-    }
+@media (min-width: 834px) {
+  /* header */
+  .cabecera__buscar__item {
+    display: block;
+  }
+  /* footer */
+  .rodapie__container {
+    justify-content: space-between;
+  }
 
+  /* MENU LATERAL PARA PANTALLAS DE TABLETS */
+  .menu__container {
+    left: 0;
+    height: auto;
+    width: 74px;
+    top: 80px;
+  }
 
-    }
-    
+  .menu__lista {
+    flex-direction: column;
+    justify-content: flex-start;
+    padding-top: 15px;
+    gap: 33px;
+  }
+}
 
+@media (min-width: 1024px) {
+  .menu__container {
+    width: 239px;
+    overflow: scroll;
+  }
+  .menu__lista:nth-child(2),
+  .menu__lista:nth-child(3),
+  .menu__lista:nth-child(4) {
+    display: flex;
+  }
 
+  .menu__lista{
+    height: auto;
+   padding: 20px 17px 20px 15px;
+   gap:15px;
+  }
 
+  .menu__lista:nth-child(3){
+     flex-direction: column-reverse;
+  }
 
+    .menu__itens{
+        flex-direction: row;
+        gap: 15px;
+        align-items: center;
+ }
+ .videojuegos{
+    order: 3;
+ }
 
+ .peliculas{
+    order: 2;
+ }
 
+ .premium{
+    order:1;
+ }
 
-
-
-
-
-
-
-
-
-
-
-
+}
 
 /* Cabecera */
 /* .cabecera__container{
@@ -110,7 +171,6 @@
     display: none;
 } */
 
-
 /* Seccion superior */
 /* .superior__seccion__container{
     display: flex;
@@ -137,8 +197,7 @@
 
 } */
 
-
-/* DESAFIO DESCRIPCIÓN DE LOS VIDEOS */ 
+/* DESAFIO DESCRIPCIÓN DE LOS VIDEOS */
 
 /* .descripcion-video {
     margin-top: 1rem;
@@ -151,7 +210,7 @@
     margin-right: 1rem; 
     flex-shrink: 0; 
       Evita que la imagen se reduzca */
-    
+
 /* } */
 /* 
 .detalles__video {
@@ -170,21 +229,18 @@
     display: flex;
     /* flex-direction: column;
    flex-wrap: wrap; */
-   /* flex-flow: column wrap; */
-    
-   
+/* flex-flow: column wrap; */
+
 /* } */
-
-
 
 /* @media (min-width:834px) { */
 
-    /* Cabecera */
-    /* .cabecera__buscar__item{
+/* Cabecera */
+/* .cabecera__buscar__item{
         display: block
     } */
-    /* Desafío Menú Lateral */
-    /* .menu__container {
+/* Desafío Menú Lateral */
+/* .menu__container {
         left: 0;
         height: auto;
         width: 74px;
@@ -198,9 +254,8 @@
         gap: 33px;
     } */
 
-
-    /* Rodapie */
-    /* .rodapie__container{
+/* Rodapie */
+/* .rodapie__container{
         justify-content: space-between;
     }
     */
@@ -258,5 +313,4 @@
 
 
 
-/* } */ 
-
+/* } */
