--- a/css/flexbox.css
+++ b/css/flexbox.css
@@ -51,6 +51,44 @@
   gap: 15px;
 }
 
+/* seccion de videos */
+.videos__item{
+  height: 303px;
+  width: 280px;
+  flex-grow: 1;
+}
+
+.videos__container{
+display: flex;
+flex-wrap: wrap;
+gap: 10px;
+}
+ /* DESAFIO DESCRIPCIÓN DE LOS VIDEOS */ 
+
+ .descripcion-video {
+  margin-top: 1rem;
+  display: flex;
+  align-items: start; 
+  
+}
+
+.descripcion-video img {
+  margin-right: 1rem; 
+  flex-shrink: 0;  /*  Evita que la imagen se reduzca */
+  
+}
+
+.detalles__video {
+  flex-direction: column;
+  text-align:left;
+
+}
+
+.detalles__video h3{
+  margin-bottom: 10px;
+}
+
+
 /* footer */
 .rodapie__container {
   display: flex;
